fixed the issue of faulty alignment in forms and everywhere

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,12 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+/* this pertains to the overall css of the codebase  */
+
 
 * {
   box-sizing: border-box;
-  margin-left: 16px;
-  margin-right: 16px;
-  margin-top: 5px;
 }
 
 body {
@@ -24,8 +23,7 @@ body {
 .wrapper {
   box-sizing: border-box;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+
 }
 
 .footer {
